# shado

./: .bumpversion.cfg  .gitignore  Makefile  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: build_wheels.yml
docs/source/: conf.py
docs/source/gallery/: ex1.ipynb  ex1.py  ex1.py.md5  ex1_codeobj.pickle  sg_execution_times.rst
src/: PPM_atm.cpp  python_bindings.cpp
tests/: test.py
